// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button styles should render a button with icon 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  <svg
    fill="none"
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M13.316 9.2V6.8c0-.994-.819-1.8-1.829-1.8l-2.439 5.4V17h6.877a1.214 1.214 0 001.22-1.02l.841-5.4a1.187 1.187 0 00-.285-.968 1.228 1.228 0 00-.934-.412h-3.45zM9.048 17H7.22A1.21 1.21 0 016 15.8v-4.2c0-.663.546-1.2 1.22-1.2h1.828V17z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
  Button
</button>
`;

exports[`Button styles should render a disabled button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
  disabled=""
>
  Button
</button>
`;

exports[`Button styles should render a giga button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 12px calc(32px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a kilo button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a mega button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a primary button by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a secondary button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #FFFFFF;
  border-color: #9DA7B1;
  color: #323E49;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #FAFBFC;
  border-color: #5C656F;
}

.circuit-0:active {
  background-color: #EEF0F2;
  border-color: #5C656F;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a stretched button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
  width: 100%;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a tertiary button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: transparent;
  border-color: transparent;
  color: #3388FF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  color: #1760CE;
}

.circuit-0:active {
  color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;
